Cambios en los nombres de los proyectos

--- a/FilterAndEmailExample/.project
+++ b/FilterAndEmailExample/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>FilterAndEmailExample</name>
+	<name>PW2-Filter</name>
 	<comment></comment>
 	<projects>
 	</projects>
