--- a/JavaWebJSPBase/.project
+++ b/JavaWebJSPBase/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JavaWebJSPBase</name>
+	<name>PW2-JSP</name>
 	<comment></comment>
 	<projects>
 	</projects>
