--- a/JavaWebServlet/.project
+++ b/JavaWebServlet/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JavaWebServlet</name>
+	<name>PW2-Servlet</name>
 	<comment></comment>
 	<projects>
 	</projects>
