--- a/JavaWebServlet/WebContent/WEB-INF/web.xml
+++ b/JavaWebServlet/WebContent/WEB-INF/web.xml
@@ -1,29 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-	id="WebApp_ID" version="3.1">
-	<display-name>JavaWebServlet</display-name>
-	<welcome-file-list>
-		<welcome-file>index</welcome-file>
-	</welcome-file-list>
-
-	<servlet>
-		<servlet-name>Generate</servlet-name>
-		<servlet-class>edu.uces.ar.servlets.ServletEscupeHTML</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Generate</servlet-name>
-		<url-pattern>/index</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<servlet-name>Process</servlet-name>
-		<servlet-class>edu.uces.ar.servlets.ProcesarFormulario</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Process</servlet-name>
-		<url-pattern>/process</url-pattern>
-	</servlet-mapping>
-
-
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
+  <display-name>PW2-Servlet</display-name>
+  <welcome-file-list>
+    <welcome-file>index</welcome-file>
+  </welcome-file-list>
+  <servlet>
+    <servlet-name>Generate</servlet-name>
+    <servlet-class>edu.uces.ar.servlets.ServletEscupeHTML</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Generate</servlet-name>
+    <url-pattern>/index</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>Process</servlet-name>
+    <servlet-class>edu.uces.ar.servlets.ProcesarFormulario</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Process</servlet-name>
+    <url-pattern>/process</url-pattern>
+  </servlet-mapping>
 </web-app>
