--- a/ServletFilterExample/.project
+++ b/ServletFilterExample/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ServletFilterExample</name>
+	<name>PW2-Filter2</name>
 	<comment></comment>
 	<projects>
 	</projects>
