--- a/pw2- api-heladeria/src/main/resources/application.properties
+++ b/pw2- api-heladeria/src/main/resources/application.properties
@@ -9,3 +9,4 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+jwt.secret=uces-pw2
