--- a/pw2- api-heladeria_jpa/pom.xml
+++ b/pw2- api-heladeria_jpa/pom.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
-	<groupId>edu.uces.ar</groupId>
-	<artifactId>pw2-api-heladeria</artifactId>
-	<version>1.0</version>
-	<name>pw2- api-heladeria</name>
-	<description>Ejemplo API REST</description>
-	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.4.RELEASE</version>
+		<version>2.1.8.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+	<groupId>edu.uces.ar</groupId>
+	<artifactId>pw2-api-heladeria_jpa</artifactId>
+	<version>1.0</version>
+	<name>pw2- api-heladeria</name>
+	<description>Ejemplo API REST</description>
 
 	<properties>
 		<java.version>1.8</java.version>
