--- a/pw2- api-heladeria/src/main/resources/application.properties
+++ b/pw2- api-heladeria/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8081
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:~/ice-cream-db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
